# bullet_proof

./: .coverage  CHANGELOG.md  CLAUDE.md  CLI_README.md  CONTRIBUTING.md  FILES_REQUIRED.md  GLOSSARY.md  INSTRUCTION_PATH_ANALYSIS.md  NO.md  README.md  REFERENCE_VALIDATION_REPORT.md  SETTINGS_TUTORIAL.md  TEST_COVERAGE.md  TEST_COVERAGE_FIX_PLAN.md  ci_results.json  dependency_update_script.py  doc_pipe_test.py  doc_pipe_test_broken.py  doc_pipe_test_missing_docs.py  docpipe_advanced_usage.py  docpipe_testing.py  generate_files_required.py  pyproject.toml  quickpush.sh  ruffi.txt  test_coverage.json  test_coverage.py  test_generate_files_required.py
.claude/hooks/: bash_command_validator.py  uv_claude_blocker.py
asd.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
collected_docs/: CHANGELOG.md  CLAUDE_COMPLIANCE_REFACTOR_SUMMARY.md  DOCUMENT_REFERENCE_MAP.md  FILES_TO_CREATE.md  README.md  REFERENCE_FIXES_SUMMARY.md  generate_files_required_rewrite_summary.md
collected_docs/planning/: TASK.md  TECHNICAL_REGISTRY.md
collected_docs_broken/: CLAUDE.md  CLAUDE_COMPLIANCE_REPORT.md  DOCUMENT_REFERENCE_REFACTORING_PLAN.md  dependency_update_action_plan.md
collected_docs_broken/docs/: api_reference.md  troubleshooting.md
collected_docs_broken/docs/adr/: template.md
collected_docs_broken/docs/automation/: task_automation_plan.md
collected_docs_broken/docs/development/: git-strategy.md
collected_docs_broken/planning/: DOCUMENTS.md  TASK.md
collected_docs_broken/planning/epics/: E-001-user-authentication-system.md
collected_docs_missing_docs/: CONTRIBUTING.md  CREATE_PACKAGE.md  GLOSSARY.md  PACKAGE_TODO.md  README.md  STRUCTURAL_SOUNDNESS_REPORT.md  TASK-template.md  automation_recovery_plan.md  automation_recovery_plan_original.md
collected_docs_missing_docs/docs/dependencies/: decisions.md
collected_docs_missing_docs/docs/deployment/: README.md
collected_docs_missing_docs/planning/: PLANNING.md
docpipe/: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  pyproject.toml  run_tests.py  setup.py
docpipe/.github/workflows/: ci.yml  release.yml
docpipe/docs/: user_guide.md
docpipe/docs/architecture/: README.md
docpipe/examples/: basic_usage.py
docpipe/src/docpipe/: __init__.py  __version__.py  api.py
docpipe/src/docpipe/analyzers/: __init__.py  base.py
docpipe/src/docpipe/analyzers/compliance/: __init__.py  analyzer.py
docpipe/src/docpipe/analyzers/document/: __init__.py  references.py  similarity.py
docpipe/src/docpipe/analyzers/project/: __init__.py
docpipe/src/docpipe/cli/: __init__.py  main.py
docpipe/src/docpipe/core/: __init__.py  engine.py  exceptions.py
docpipe/src/docpipe/models/: __init__.py  config.py  issues.py  results.py
docpipe/src/docpipe/utils/: __init__.py
docpipe/tests/: __init__.py  conftest.py
docpipe/tests/compliance/: test_claude_compliance_checker.py  test_compliance_checks.py
docpipe/tests/document_analysis/similarity/: test_string_similarity.py
docpipe/tests/integration/: test_api.py
docpipe/tests/project_analysis/: __init__.py  test_instruction_path_tracer.py
docpipe/tests/test_compliance/: test_compliance_checks.py  test_reports.py
docpipe/tests/unit/analyzers/: test_compliance.py  test_references.py  test_similarity.py
docpipe/tests/unit/models/: test_config.py  test_issues.py
docpipe/tests/validation/: test_reference_validator_merged.py  test_structural_soundness_checker.py  test_validation.py
document_analyzer/: __init__.py  analyzers.py  config.py  core.py  embeddings.py  example_usage.py  instruction_path_tracer.py  markdown_analyzer.py  merging.py  reference_validator.py  reference_validator_enhanced.py  reports.py  structural_soundness_checker.py  test___init__.py  test_core.py  test_embeddings.py  validation.py
examples/: document_analysis_demo.py
planning/: PLANNING.md  sprint.config.json
src/: cli.py  imports.txt
src/compliance/: __init__.py  claude_compliance_checker.py  claude_compliance_checker_simple.py  compliance_checks.py  reports.py
src/document_analysis/: __init__.py  analyzers.py  config.py  core.py  markdown_analyzer.py  merging.py  reference_validator.py  reports.py  structural_soundness_checker.py  validation.py
src/document_analysis/similarity/: __init__.py  base.py  matrix_utils.py  semantic_similarity.py  string_similarity.py
src/document_tools/compliance/: claude_compliance_checker_simple.py  compliance_checks.py
src/document_tools/document_analysis/: __init__.py  embeddings.py
src/document_tools/validation/: __init__.py
src/project_analysis/: __init__.py  coverage_analyzer.py  document_parser.py  instruction_node.py  instruction_path_tracer.py  merging.py  path_resolver.py  patterns.py  report_generator.py  test_instruction_path_tracer.py
src/validation/: reference_validator.py  reference_validator_enhanced.py  reference_validator_merged.py  structural_soundness_checker.py  validation.py
tests/: __init__.py  conftest.py  test___init__.py
tests/compliance/: __init__.py  test_claude_compliance_checker.py  test_claude_compliance_checker_simple.py
tests/document_analysis/: __init__.py
tests/document_analysis/similarity/: __init__.py
tests/project_analysis/: __init__.py  test_instruction_path_tracer.py
tests/test_compliance/: test_reports.py
tests/test_document_analysis/: test_analyzers.py  test_config.py  test_core.py  test_embeddings.py  test_markdown_analyzer.py  test_matrix_utils.py  test_reference_validator.py  test_semantic_similarity.py  test_similarity_base.py  test_structural_soundness_checker.py  test_validation.py
tests/test_project_analysis/: test_coverage_analyzer.py  test_patterns.py
tests/test_validation/: test_validation.py
tukes_scraper.egg-info/: PKG-INFO  entry_points.txt  requires.txt
